Document/DeploymentSet/ts-deployment-part3.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ts-ui-dashboard
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: ts-ui-dashboard
    spec:
      containers:
      - name: ts-ui-dashboard
        image: 10.141.211.175:5000/jichao/cluster-ts-ui-dashboard
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 50m
            memory: 100Mi
          limits:
            cpu: 500m
            memory: 500Mi

---

apiVersion: v1
kind: Service
metadata:
  name: ts-ui-dashboard
spec:
  type: NodePort
  ports:
    - name: http
      port: 8080
      nodePort: 30136
  selector:
   app: ts-ui-dashboard

---
