Document/DeploymentSet/new-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: trainticket-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: trainticket
spec:
  hosts:
  - "*"
  gateways:
  - trainticket-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: ts-ui-dashboard
        port:
          number: 8080
